--- a/teanicorns-art-trade-bot/Properties/Resources.resx
+++ b/teanicorns-art-trade-bot/Properties/Resources.resx
@@ -120,9 +120,6 @@
   <data name="GOOGLE_TRADE_ENDING_SOON2" xml:space="preserve">
     <value>@everyone the art **Trade month** will be ending in 3 days, please reveal your art submissions until then.</value>
   </data>
-  <data name="GOOGLE_TRADE_UNCLOSED" xml:space="preserve">
-    <value>@everyone the art **Trade month** should have ended today, but there are still some missing submissions.</value>
-  </data>
   <data name="REF_EW_TAKING_PLACE" xml:space="preserve">
     <value>Sorry &lt;@{0}&gt;. Entry week is currently taking place. Trade pairs are not formed until closed.</value>
   </data>
@@ -162,17 +159,8 @@
   <data name="REF_TRADE_TAKING_PLACE" xml:space="preserve">
     <value>Sorry &lt;@{0}&gt;. Art trade is currently taking place. Can't modify existing entries</value>
   </data>
-  <data name="REF_TRADE_THEME" xml:space="preserve">
-    <value>Theme of this art trade is.. \"{0}\"</value>
-  </data>
-  <data name="TRADE_ACTIVE_SET" xml:space="preserve">
-    <value>&lt;@{0}&gt; the trade start info has been set.</value>
-  </data>
   <data name="TRADE_ADMIN_BLOCK" xml:space="preserve">
     <value>Sorry &lt;@{0}&gt;. You don't have required priviledges to run this command.</value>
-  </data>
-  <data name="TRADE_ART_IN_PROGRESS" xml:space="preserve">
-    <value>&lt;@{0}&gt; the art trade month is already in progress.</value>
   </data>
   <data name="TRADE_ART_LATE" xml:space="preserve">
     <value>Following users did not reveal their art, please do so once you are ready (you can reveal it even after the trade ended): {0}</value>
@@ -180,101 +168,41 @@
   <data name="TRADE_ART_ON_TIME" xml:space="preserve">
     <value>Everyone submitted their art on time!</value>
   </data>
-  <data name="TRADE_BACKUP_DATABASE_DONE" xml:space="preserve">
-    <value>Sending the full database &lt;@{0}&gt;.</value>
-  </data>
-  <data name="TRADE_BACKUP_DONE" xml:space="preserve">
-    <value>Backup file has been updated successfully &lt;@{0}&gt;.</value>
-  </data>
   <data name="TRADE_BACKUP_HISTORY_DONE" xml:space="preserve">
     <value>Sending the full history stream &lt;@{0}&gt;.</value>
-  </data>
-  <data name="TRADE_CHANGE_PAIR_DONE" xml:space="preserve">
-    <value>&lt;@{0}&gt; the art trade partner of {1} has been changed to {2}.</value>
-  </data>
-  <data name="TRADE_CHANGE_PAIR_MISSING_FIRST" xml:space="preserve">
-    <value>Sorry &lt;@{0}&gt;. Could not find the first partner.</value>
-  </data>
-  <data name="TRADE_CHANGE_PAIR_MISSING_SECOND" xml:space="preserve">
-    <value>Sorry &lt;@{0}&gt;. Could not find the second partner.</value>
-  </data>
-  <data name="TRADE_CHANGE_PAIR_PROBLEM" xml:space="preserve">
-    <value>Sorry &lt;@{0}&gt;. Was not able to change your art trade partner.</value>
-  </data>
-  <data name="TRADE_CHANNEL_PROBLEM" xml:space="preserve">
-    <value>Sorry &lt;@{0}&gt;. Was not able to change the working channel. Current working channel is {1}.</value>
-  </data>
-  <data name="TRADE_CHANNEL_SET" xml:space="preserve">
-    <value>Channel has been set successfully.</value>
   </data>
   <data name="TRADE_ENDS_ON" xml:space="preserve">
     <value>The art trade ends on.. {0}.</value>
   </data>
-  <data name="TRADE_ENTRIES_CLEARED" xml:space="preserve">
-    <value>All entries successfully removed &lt;@{0}&gt;. Backup file updated.</value>
-  </data>
   <data name="TRADE_ENTRIES_SHUFFLE" xml:space="preserve">
     <value>Entries have been shuffled successfully &lt;@{0}&gt;.</value>
   </data>
-  <data name="TRADE_EW_IN_PROGRESS" xml:space="preserve">
-    <value>&lt;@{0}&gt; the entry week is already in progress.</value>
+  <data name="GLOBAL_IN_PROGRESS" xml:space="preserve">
+    <value>&lt;@{0}&gt; {1} is already in progress.</value>
   </data>
-  <data name="TRADE_LISTING_ALL" xml:space="preserve">
-    <value>Listing all entries &lt;@{0}&gt;. Each next entry is the partner of the previous one.</value>
+  <data name="TRADE_LIST_ENTRIES" xml:space="preserve">
+    <value>Listing all entries. Each next entry is the partner of the previous one.</value>
   </data>
-  <data name="TRADE_LIST_OTHER_INFO" xml:space="preserve">
+  <data name="TRADE_LIST_SETTINGS" xml:space="preserve">
     <value>Listing other info.. working channel is.. \"{0}\", trade is taking place from.. {1} to {2} ({3} days), notify flags.. {4}, trade end forced.. {5}</value>
   </data>
   <data name="TRADE_NEW_ENTRIES" xml:space="preserve">
-    <value>@everyone the **entry week** started. **We are accepting new entries!** Please use the \"{0}se\" or \"{1}set entry\" cmd.</value>
+    <value>@everyone the **entry week** started. **We are accepting new entries!**
+please use `{0}{1}`  to register or use `{0}{2}` if you need more info</value>
   </data>
   <data name="TRADE_NO_NEW_ENTRIES" xml:space="preserve">
-    <value>@everyone the art **trade month** started. **We are no longer accepting new entries!**</value>
-  </data>
-  <data name="TRADE_RESTORE_DATABASE_DONE" xml:space="preserve">
-    <value>The database has been loaded successfully &lt;@{0}&gt;.</value>
-  </data>
-  <data name="TRADE_RESTORE_DATABASE_PROBLEM" xml:space="preserve">
-    <value>Sorry &lt;@{0}&gt;. There have been some problems when loading the database.</value>
-  </data>
-  <data name="TRADE_RESTORE_DONE" xml:space="preserve">
-    <value>All entries successfully restored &lt;@{0}&gt;.</value>
-  </data>
-  <data name="TRADE_RESTORE_HISTORY_DONE" xml:space="preserve">
-    <value>The history has been loaded successfully &lt;@{0}&gt;.</value>
-  </data>
-  <data name="TRADE_RESTORE_HISTORY_PROBLEM" xml:space="preserve">
-    <value>Sorry &lt;@{0}&gt;. There have been some problems when loading the history.</value>
-  </data>
-  <data name="TRADE_RESTORE_NO_BACKUP" xml:space="preserve">
-    <value>Sorry &lt;@{0}&gt;. No backup file found.</value>
+    <value>@everyone the art **trade month** started. **We are no longer accepting new entries!**
+please use `{0}{1}` to show your finished art piece or use `{0}{2}` if you need more info
+but please wait until the end of the trade when everybody has fihisned their art too</value>
   </data>
   <data name="TRADE_SEND_ENTRIES_MISSING" xml:space="preserve">
     <value>Could not find any entry info for:</value>
-  </data>
-  <data name="TRADE_SEND_PARTNERS_DONE" xml:space="preserve">
-    <value>All trade participants received their partners.</value>
   </data>
   <data name="TRADE_SEND_PARTNERS_MISSING" xml:space="preserve">
     <value>Could not find an art trade partner for:</value>
   </data>
   <data name="TRADE_SEND_USERS_MISSING" xml:space="preserve">
     <value>Users not found:</value>
-  </data>
-  <data name="TRADE_TAKING_PLACE_EW" xml:space="preserve">
-    <value>Currently taking place.. **Entry week**.</value>
-  </data>
-  <data name="TRADE_TAKING_PLACE_TM" xml:space="preserve">
-    <value>Currently taking place.. **Trade month**.</value>
-  </data>
-  <data name="TRADE_THEME_NULL" xml:space="preserve">
-    <value>Sorry &lt;@{0}&gt;. The provided theme is null or whitespace.</value>
-  </data>
-  <data name="TRADE_THEME_PROBLEM" xml:space="preserve">
-    <value>Sorry &lt;@{0}&gt;. There has been a problem when setting the theme.</value>
-  </data>
-  <data name="TRADE_THEME_SET" xml:space="preserve">
-    <value>The theme has been set successfully &lt;@{0}&gt;!</value>
   </data>
   <data name="TRADE_THIS_THEME" xml:space="preserve">
     <value>Theme of this month's art trade is.. \"{0}\".</value>
@@ -301,6 +229,32 @@
     <value>Sorry &lt;@{0}&gt; but you did not commit the art for the last trade, you cannot enter the current trade.</value>
   </data>
   <data name="GOOGLE_TRADE_ENDING_NOW" xml:space="preserve">
-    <value>@everyone the **trade** is ending, please send me your wonderful art using the \"{0}ra\" or \"{1}reveal art\" cmd! .. ówò</value>
+    <value>@everyone the **trade** is ending, please send me your wonderful art using the \"{0}ra\" or \"{1}reveal art\" command.</value>
+  </data>
+  <data name="INFO_ADMIN_CMD_LIST" xml:space="preserve">
+    <value>**Admin commands**</value>
+  </data>
+  <data name="INFO_CMD_LIST" xml:space="preserve">
+    <value>**Commands**</value>
+  </data>
+  <data name="INFO_INTRO" xml:space="preserve">
+    <value>Hello &lt;@{0}&gt;, I am art-trade-bot, written in Discord.Net ({1}).
+For more information about a specific command please type {2}{3} followed by the command name at the end.
+For example `{2}{3} {4}`</value>
+  </data>
+  <data name="GLOBAL_UNKNOW_ARG" xml:space="preserve">
+    <value>Sorry &lt;@{0}&gt;. Unknown or missing input argument.</value>
+  </data>
+  <data name="INFO_PARAM_CMD_LIST" xml:space="preserve">
+    <value>**Parameters**</value>
+  </data>
+  <data name="GLOBAL_REQUEST_DONE" xml:space="preserve">
+    <value>&lt;@{0}&gt; your request has been completed</value>
+  </data>
+  <data name="GLOBAL_REQUEST_FAIL" xml:space="preserve">
+    <value>&lt;@{0}&gt; your request has failed</value>
+  </data>
+  <data name="TRADE_LIST_ONOFF" xml:space="preserve">
+    <value>`{0}` is currently active</value>
   </data>
 </root>
