--- a/teanicorns-art-trade-bot/Properties/Resources.en-GB.resx
+++ b/teanicorns-art-trade-bot/Properties/Resources.en-GB.resx
@@ -145,7 +145,7 @@
     <value>&lt;@{0}&gt; I need description and/or embeded image, please send again (ówò)</value>
   </data>
   <data name="REF_TRADE_PARTNER" xml:space="preserve">
-    <value>&lt;@{0}&gt; your partner is {1} , Have Fun! (^•^)</value>
+    <value>&lt;@{0}&gt; your partner is `{1}` , Have Fun! (^•^)</value>
   </data>
   <data name="REF_TRADE_REG_SUCC" xml:space="preserve">
     <value>&lt;@{0}&gt; I saved your entry (^•^)</value>
@@ -258,5 +258,16 @@ you can type it to the channel or send me a direct message</value>
   </data>
   <data name="REF_TRADE_THEME_POOL" xml:space="preserve">
     <value>&lt;@{0}&gt; here is a list of your registered themes (^•^)</value>
+  </data>
+  <data name="TRADE_THEME_POOL_START" xml:space="preserve">
+    <value>please choose which theme you'd like for this month's art trade 
+the poll will take 2 days, theme with the most votes wins! (^•^)
+if there are more themes with the most votes, then the theme is chosen from them by random</value>
+  </data>
+  <data name="GLOBAL_DUPLICAT_ARG" xml:space="preserve">
+    <value>&lt;@{0}&gt; there already is a {1} with this name registered (ówò)</value>
+  </data>
+  <data name="GOOGLE_TRADE_THEME_POLL_RESULTS" xml:space="preserve">
+    <value>@everyone the results of the themes poll are here, this mont's theme is `{0}`, good luck everyone!</value>
   </data>
 </root>
