--- a/teanicorns-art-trade-bot/Properties/Resources.resx
+++ b/teanicorns-art-trade-bot/Properties/Resources.resx
@@ -257,4 +257,13 @@ For example `{2}{3} {4}`</value>
   <data name="REF_TRADE_THEME_POOL" xml:space="preserve">
     <value>&lt;@{0}&gt; here is a list of your registered themes:</value>
   </data>
+  <data name="TRADE_THEME_POOL_START" xml:space="preserve">
+    <value>please choose which theme you'd like for this month's art trade</value>
+  </data>
+  <data name="GLOBAL_DUPLICAT_ARG" xml:space="preserve">
+    <value>&lt;@{0}&gt; there already is a {1} with this name registered</value>
+  </data>
+  <data name="GOOGLE_TRADE_THEME_POLL_RESULTS" xml:space="preserve">
+    <value>@everyone there results of the themes poll are here, this mont's theme is {0}, good luck everyone! </value>
+  </data>
 </root>
