--- a/teanicorns-art-trade-bot/Properties/Resources.resx
+++ b/teanicorns-art-trade-bot/Properties/Resources.resx
@@ -181,7 +181,7 @@
     <value>Listing other info.. working channel is.. \"{0}\", trade is taking place from.. {1} to {2} ({3} days), notify flags.. {4}, trade end forced.. {5}</value>
   </data>
   <data name="TRADE_NEW_ENTRIES" xml:space="preserve">
-    <value>@everyone the **entry week** started. **We are accepting new entries!**
+    <value>the **entry week** started. **We are accepting new entries!**
 please use `{0}{1}`  to register or use `{0}{2}` if you need more info</value>
   </data>
   <data name="TRADE_NO_NEW_ENTRIES" xml:space="preserve">
