--- a/teanicorns-art-trade-bot/Properties/Resources.resx
+++ b/teanicorns-art-trade-bot/Properties/Resources.resx
@@ -189,15 +189,6 @@ please use `{0}{1}`  to register or use `{0}{2}` if you need more info</value>
 please use `{0}{1}` to show your finished art piece or use `{0}{2}` if you need more info
 but please wait until the end of the trade when everybody has fihisned their art too</value>
   </data>
-  <data name="TRADE_SEND_ENTRIES_MISSING" xml:space="preserve">
-    <value>Could not find any entry info for:</value>
-  </data>
-  <data name="TRADE_SEND_PARTNERS_MISSING" xml:space="preserve">
-    <value>Could not find an art trade partner for:</value>
-  </data>
-  <data name="TRADE_SEND_USERS_MISSING" xml:space="preserve">
-    <value>Users not found:</value>
-  </data>
   <data name="TRADE_THIS_THEME" xml:space="preserve">
     <value>Theme of this month's art trade is.. \"{0}\".</value>
   </data>
@@ -258,12 +249,13 @@ For example `{2}{3} {4}`</value>
     <value>&lt;@{0}&gt; here is a list of your registered themes:</value>
   </data>
   <data name="TRADE_THEME_POOL_START" xml:space="preserve">
-    <value>please choose which theme you'd like for this month's art trade</value>
+    <value>please choose which theme you'd like for this month's art trade 
+the poll will take `{0}` days and theme with the most votes wins! (^•^)</value>
   </data>
   <data name="GLOBAL_DUPLICAT_ARG" xml:space="preserve">
     <value>&lt;@{0}&gt; there already is a {1} with this name registered</value>
   </data>
-  <data name="GOOGLE_TRADE_THEME_POLL_RESULTS" xml:space="preserve">
-    <value>@everyone there results of the themes poll are here, this mont's theme is {0}, good luck everyone! </value>
+  <data name="TRADE_THEME_POOL_SUBS" xml:space="preserve">
+    <value>`{0}` is currently taking place in `{1}` channel (^•^)</value>
   </data>
 </root>
