--- a/teanicorns-art-trade-bot/Properties/Resources.en-GB.resx
+++ b/teanicorns-art-trade-bot/Properties/Resources.en-GB.resx
@@ -242,9 +242,6 @@ you can type it to the channel or send me a direct message</value>
   <data name="TRADE_LIST_ONOFF" xml:space="preserve">
     <value>`{0}` is currently active</value>
   </data>
-  <data name="REF_TRADE_REGISTER_FIRST" xml:space="preserve">
-    <value>&lt;@{0}&gt; please register your trade entry first (ówò)</value>
-  </data>
   <data name="REF_TRADE_THEME_POOL" xml:space="preserve">
     <value>&lt;@{0}&gt; here is a list of your registered themes (^•^)</value>
   </data>
@@ -257,5 +254,8 @@ the poll will take `{0}` days and the theme with the most votes wins! (^•^)</v
   </data>
   <data name="TRADE_THEME_POOL_SUBS" xml:space="preserve">
     <value>`{0}` is currently taking place in `{1}` channel (^•^)</value>
+  </data>
+  <data name="GLOBAL_MAX_NUM_OF_ARGS" xml:space="preserve">
+    <value>&lt;@{0}&gt; max number of {1} reached, sorry! (ówò)</value>
   </data>
 </root>
