--- a/teanicorns-art-trade-bot/Properties/Resources.resx
+++ b/teanicorns-art-trade-bot/Properties/Resources.resx
@@ -178,7 +178,7 @@
     <value>Listing all entries. Each next entry is the partner of the previous one.</value>
   </data>
   <data name="TRADE_LIST_SETTINGS" xml:space="preserve">
-    <value>Listing other info.. working channel is.. \"{0}\", trade is taking place from.. {1} to {2} ({3} days), notify flags.. {4}, trade end forced.. {5}</value>
+    <value>Listing other info.. working channel is.. \"{0}\", trade is taking place from.. {1} to {2} ({3} days), notify flags.. {4}, trade end forced.. {5}, theme poll ID: {6}</value>
   </data>
   <data name="TRADE_NEW_ENTRIES" xml:space="preserve">
     <value>the **entry week** started. **We are accepting new entries!**
