--- a/teanicorns-art-trade-bot/Properties/Resources.en-GB.resx
+++ b/teanicorns-art-trade-bot/Properties/Resources.en-GB.resx
@@ -247,8 +247,7 @@ you can type it to the channel or send me a direct message</value>
     <value>&lt;@{0}&gt; here is a list of your registered themes (^•^)</value>
   </data>
   <data name="TRADE_THEME_POOL_START" xml:space="preserve">
-    <value>please choose which theme you'd like for this month's art trade 
-the poll will take `{0}` days and the theme with the most votes wins! (^•^)</value>
+    <value>@everyone please choose which theme you'd like for this month's art trade, the theme with the most votes wins! (^•^)</value>
   </data>
   <data name="GLOBAL_DUPLICAT_ARG" xml:space="preserve">
     <value>&lt;@{0}&gt; there already is a {1} with this name registered (ówò)</value>
@@ -258,5 +257,8 @@ the poll will take `{0}` days and the theme with the most votes wins! (^•^)</v
   </data>
   <data name="GLOBAL_MAX_NUM_OF_ARGS" xml:space="preserve">
     <value>&lt;@{0}&gt; max number of {1} reached, sorry! (ówò)</value>
+  </data>
+  <data name="TRADE_THEME_POOL_EMPTY" xml:space="preserve">
+    <value>(there are no themes registered at the moment, please use `{0}{1}` to register a theme)</value>
   </data>
 </root>
