--- a/teanicorns-art-trade-bot/Properties/Resources.en-GB.resx
+++ b/teanicorns-art-trade-bot/Properties/Resources.en-GB.resx
@@ -117,148 +117,92 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="GOOGLE_TRADE_ENDING_SOON2" xml:space="preserve">
-    <value>@everyone `art trade` ends in `3` days! (^•^)</value>
-  </data>
-  <data name="REF_EW_TAKING_PLACE" xml:space="preserve">
-    <value>&lt;@{0}&gt; others still send me their entries, I haven't assigned partners yet, please wait (ówò)</value>
-  </data>
-  <data name="REF_MISSING_ART" xml:space="preserve">
-    <value>&lt;@{0}&gt; I need embeded image, please send me again (ówò)</value>
-  </data>
-  <data name="REF_MISSING_PARTNER" xml:space="preserve">
-    <value>&lt;@{0}&gt; I couldn't find your partner, sorry (ówò)</value>
-  </data>
-  <data name="REF_NOT_REG" xml:space="preserve">
-    <value>&lt;@{0}&gt; I couldn't find your entry, sorry (ówò)</value>
-  </data>
   <data name="REF_REVEAL_FINAL" xml:space="preserve">
-    <value>&lt;@{0}&gt; `{1}` made you some art (^•^)</value>
+    <value>&lt;@{0}&gt; `{1}` made you some art!</value>
   </data>
   <data name="REF_REVEAL_NOTIFY" xml:space="preserve">
-    <value>thanks &lt;@{0}&gt;, you made me and &lt;@{1}&gt; happy (^•^)</value>
-  </data>
-  <data name="REF_REVEAL_SORRY" xml:space="preserve">
-    <value>&lt;@{0}&gt; your partner was not notified, sorry something went wrong (ówò)</value>
-  </data>
-  <data name="REF_TRADE_MISSING_REF" xml:space="preserve">
-    <value>&lt;@{0}&gt; I need description and/or embeded image, please send again (ówò)</value>
+    <value>thanks &lt;@{0}&gt;! a notification was sent to &lt;@{1}&gt;</value>
   </data>
   <data name="REF_TRADE_PARTNER" xml:space="preserve">
-    <value>&lt;@{0}&gt; your partner is `{1}` , Have Fun! (^•^)</value>
+    <value>&lt;@{0}&gt; your partner is `{1}` , good luck!</value>
   </data>
-  <data name="REF_TRADE_REG_SUCC" xml:space="preserve">
-    <value>&lt;@{0}&gt; I saved your entry (^•^)</value>
-  </data>
-  <data name="REF_TRADE_TAKING_PLACE" xml:space="preserve">
-    <value>&lt;@{0}&gt; **trade** already started, you can't change your entry no more [òwó]</value>
-  </data>
-  <data name="GLOBAL_REQUEST_DONE" xml:space="preserve">
-    <value>&lt;@{0}&gt; your request is done (^•^)</value>
-  </data>
-  <data name="TRADE_ADMIN_BLOCK" xml:space="preserve">
-    <value>&lt;@{0}&gt; I'm not supposed to let you run this command, sorry! (ówò)</value>
-  </data>
-  <data name="TRADE_ART_LATE" xml:space="preserve">
-    <value>Naughty list: {0} [òwó]</value>
-  </data>
-  <data name="TRADE_ART_ON_TIME" xml:space="preserve">
-    <value>Naughty list: **empty!** (^•^)</value>
-  </data>
-  <data name="TRADE_BACKUP_HISTORY_DONE" xml:space="preserve">
-    <value>&lt;@{0}&gt; here you go (^•^)</value>
+  <data name="GLOBAL_SUCCESS" xml:space="preserve">
+    <value>&lt;@{0}&gt; request done, {1}</value>
   </data>
   <data name="TRADE_ENDS_ON" xml:space="preserve">
     <value>trade will be ending in `{0}` days on `{1}`</value>
   </data>
-  <data name="TRADE_ENTRIES_SHUFFLE" xml:space="preserve">
-    <value>&lt;@{0}&gt; I shuffled all entries (^•^)</value>
-  </data>
   <data name="GLOBAL_IN_PROGRESS" xml:space="preserve">
-    <value>&lt;@{0}&gt; {1} was already set (ówò)</value>
-  </data>
-  <data name="TRADE_LIST_ENTRIES" xml:space="preserve">
-    <value>**Entries**</value>
+    <value>&lt;@{0}&gt; {1} is already in progress</value>
   </data>
   <data name="TRADE_LIST_SETTINGS" xml:space="preserve">
     <value>channel: `{0}`
 trade from `{1}` to `{2}` (`{3}` days)
 flags: `{4}`
-end forced: `{5}`
-theme poll ID: `{6}`</value>
+end forced: `{5}`</value>
   </data>
-  <data name="TRADE_NEW_ENTRIES" xml:space="preserve">
-    <value>the `entry week` started, `I'm accepting new entries!`
-please use `{0}{1}`  to register or use `{0}{2}` if you need more info (^•^)</value>
+  <data name="ENTRY_WEEK" xml:space="preserve">
+    <value>**Entry Week**
+@everyone the `entry week` started, `I'm accepting new entries!`
+please use `{0}{1}`  to register or use `{0}{2}` if you need more info</value>
   </data>
-  <data name="TRADE_NO_NEW_ENTRIES" xml:space="preserve">
-    <value>@everyone the `trade month` started
-`I'm no longer accepting new entries!`
-please use `{0}{1}` to show your finished art piece or use `{0}{2}` if you need more info (^•^)</value>
+  <data name="TRADE_MONTH" xml:space="preserve">
+    <value>**Trade Month**
+@everyone the `trade month` started, `I'm no longer accepting new entries!`
+please use `{0}{1}` to register your finished art or use `{0}{2}` if you need more info</value>
   </data>
   <data name="TRADE_THIS_THEME" xml:space="preserve">
     <value>this month's art trade theme is `{0}`</value>
   </data>
-  <data name="MAIN_PROGRAM_MESSAGE_RECEIVED" xml:space="preserve">
-    <value>&lt;@{0}&gt; error: {1}{2} oh no (ówò)</value>
+  <data name="GLOBAL_ERROR" xml:space="preserve">
+    <value>&lt;@{0}&gt; something went wrong (error: {1})</value>
   </data>
-  <data name="GOOGLE_TRADE_ENDING_SOON3" xml:space="preserve">
-    <value>@everyone `art trade` ends `tomorrow` (^•^)</value>
-  </data>
-  <data name="GOOGLE_TRADE_ENDING_SOON1" xml:space="preserve">
-    <value>@everyone `art trade` ends in `7` days! (^•^)</value>
-  </data>
-  <data name="TRADE_ART_LATE_1" xml:space="preserve">
-    <value>Previous naughty list (`{0}` theme): {1} [ówò]</value>
-  </data>
-  <data name="TRADE_ART_LATE_2" xml:space="preserve">
-    <value>Previous previous naughty list (`{0}` theme): {1} [ÓwÒ]</value>
+  <data name="GOOGLE_TRADE_ENDING_SOON" xml:space="preserve">
+    <value>@everyone `art trade` ends {0}</value>
   </data>
   <data name="TRADE_ART_LATE_DM" xml:space="preserve">
-    <value>&lt;@{0}&gt; this month's trade ended (`{1}` theme), will I be seeing your art soon? (ówò)</value>
+    <value>&lt;@{0}&gt; this month's `{1}` themed trade ended, but I'm still missing your art, please send me your art soon</value>
   </data>
   <data name="REF_TRADE_LAST_MONTH_ART_MISSING" xml:space="preserve">
-    <value>&lt;@{0}&gt; you didn't send me the art for the previous trade, I'm sorry but I'm not supposed to let you enter this month's trade! (ówò)</value>
+    <value>&lt;@{0}&gt; you didn't send me the art for the previous trade (`{1}`), I'm sorry but I'm not supposed to let you enter this month</value>
   </data>
   <data name="GOOGLE_TRADE_ENDING_NOW" xml:space="preserve">
-    <value>@everyone the **trade** is ending, please send me your art using the `{0}{1}` command or use `{0}{2}` if you need more info  (^•^)</value>
-  </data>
-  <data name="INFO_ADMIN_CMD_LIST" xml:space="preserve">
-    <value>**Admin Commands**</value>
-  </data>
-  <data name="INFO_CMD_LIST" xml:space="preserve">
-    <value>**User Commands**</value>
+    <value>@everyone the **trade** is ending, please send me your art using the `{0}{1}` command or use `{0}{2}` if you need more info</value>
   </data>
   <data name="INFO_INTRO" xml:space="preserve">
-    <value>hello &lt;@{0}&gt;, my name is Bottie the art trade bot and I'm written in Discord.Net {1}
-for more info about a specific command please type `{2}{3}` followed by the command name at the end for example `{2}{3} {4}`
-you can type it to the channel or send me a direct message</value>
+    <value>my name is Bottie the art trade bot and I'm written in Discord.Net {0}
+for more info about a specific command please type `{1}{2}` followed by the command name at the end for example `{1}{2} {3}`
+you can type it to this channel or send me a direct message</value>
   </data>
   <data name="GLOBAL_UNKNOW_ARG" xml:space="preserve">
-    <value>&lt;@{0}&gt; unknown or missing command argument (ówò)</value>
-  </data>
-  <data name="GLOBAL_REQUEST_FAIL" xml:space="preserve">
-    <value>&lt;@{0}&gt; your request has failed (ówò)</value>
+    <value>&lt;@{0}&gt; unknown or missing command argument</value>
   </data>
   <data name="TRADE_LIST_ONOFF" xml:space="preserve">
     <value>`{0}` is currently active</value>
   </data>
-  <data name="REF_TRADE_THEME_POOL" xml:space="preserve">
-    <value>&lt;@{0}&gt; here is a list of your registered themes (^•^)</value>
-  </data>
   <data name="TRADE_THEME_POOL_START" xml:space="preserve">
-    <value>@everyone please choose which theme you'd like for this month's art trade, the theme with the most votes wins! (^•^)</value>
+    <value>**Trade Poll**
+@everyone please choose which theme you'd like for this month's art trade, the `theme with the most votes wins!`</value>
   </data>
   <data name="GLOBAL_DUPLICAT_ARG" xml:space="preserve">
-    <value>&lt;@{0}&gt; there already is a {1} with this name registered (ówò)</value>
+    <value>&lt;@{0}&gt; there already is {1} with this name registered</value>
   </data>
   <data name="TRADE_THEME_POOL_SUBS" xml:space="preserve">
-    <value>`{0}` is currently taking place in `{1}` channel (^•^)</value>
+    <value>`{0}` is currently taking place in `{1}` channel</value>
   </data>
   <data name="GLOBAL_MAX_NUM_OF_ARGS" xml:space="preserve">
-    <value>&lt;@{0}&gt; max number of {1} reached, sorry! (ówò)</value>
+    <value>&lt;@{0}&gt; maximum number of {1} reached</value>
   </data>
-  <data name="TRADE_THEME_POOL_EMPTY" xml:space="preserve">
-    <value>(there are no themes registered at the moment, please use `{0}{1}` to register a theme)</value>
+  <data name="GLOBAL_CMDHELP" xml:space="preserve">
+    <value>you can use the `{0}{1}` to {2}</value>
+  </data>
+  <data name="GLOBAL_EMPTY" xml:space="preserve">
+    <value>there are no {0} registered at the moment</value>
+  </data>
+  <data name="GLOBAL_ITEM_NOT_FOUND" xml:space="preserve">
+    <value>&lt;@{0}&gt; I couldn't find your {1}</value>
+  </data>
+  <data name="GLOBAL_MISSING_INPUT" xml:space="preserve">
+    <value>&lt;@{0}&gt; I need {1}, please send me again</value>
   </data>
 </root>
