--- a/teanicorns-art-trade-bot/Properties/Resources.en-GB.resx
+++ b/teanicorns-art-trade-bot/Properties/Resources.en-GB.resx
@@ -155,7 +155,7 @@ please use `{0}{1}` to register your finished art or use `{0}{2}` if you need mo
     <value>this month's art trade theme is `{0}`</value>
   </data>
   <data name="GLOBAL_ERROR" xml:space="preserve">
-    <value>&lt;@{0}&gt; something went wrong (error: {1})</value>
+    <value>&lt;@{0}&gt; something went wrong, {1}</value>
   </data>
   <data name="GOOGLE_TRADE_ENDING_SOON" xml:space="preserve">
     <value>@everyone `art trade` ends {0}</value>
@@ -204,5 +204,11 @@ you can type it to this channel or send me a direct message</value>
   </data>
   <data name="GLOBAL_MISSING_INPUT" xml:space="preserve">
     <value>&lt;@{0}&gt; I need {1}, please send me again</value>
+  </data>
+  <data name="String" xml:space="preserve">
+    <value>please use the `{1}{2}` command if you wish to reply, here is the message: {3}</value>
+  </data>
+  <data name="TRADE_ECHO" xml:space="preserve">
+    <value>&lt;@{0}&gt; I'm sending you a message from your secret trade partner in his stead</value>
   </data>
 </root>
