--- a/teanicorns-art-trade-bot/Properties/Resources.en-GB.resx
+++ b/teanicorns-art-trade-bot/Properties/Resources.en-GB.resx
@@ -208,7 +208,9 @@ you can type it to this channel or send me a direct message</value>
   <data name="String" xml:space="preserve">
     <value>please use the `{1}{2}` command if you wish to reply, here is the message: {3}</value>
   </data>
-  <data name="TRADE_ECHO" xml:space="preserve">
-    <value>&lt;@{0}&gt; I'm sending you a message from your secret trade partner in his stead</value>
+  <data name="TRADE_PINGPONG" xml:space="preserve">
+    <value>hello &lt;@{0}&gt; I'm sending you a message from `{1}` in their stead
+please use the `{2}{3}` command if you wish to reply, here is the message:
+*\"{4}\"*</value>
   </data>
 </root>
