--- a/teanicorns-art-trade-bot/Properties/Resources.en-GB.resx
+++ b/teanicorns-art-trade-bot/Properties/Resources.en-GB.resx
@@ -118,7 +118,7 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="REF_REVEAL_FINAL" xml:space="preserve">
-    <value>&lt;@{0}&gt; `{1}` made you some art!</value>
+    <value>&lt;@{0}&gt; `{1}` wants to show you their art for the `{2}` themed art trade</value>
   </data>
   <data name="REF_REVEAL_NOTIFY" xml:space="preserve">
     <value>thanks &lt;@{0}&gt;! a notification was sent to &lt;@{1}&gt;</value>
@@ -149,7 +149,7 @@ please use `{0}{1}`  to register or use `{0}{2}` if you need more info</value>
   <data name="TRADE_MONTH" xml:space="preserve">
     <value>**Trade Month**
 @everyone the `trade month` started, `I'm no longer accepting new entries!`
-please use `{0}{1}` to register your finished art or use `{0}{2}` if you need more info</value>
+please use `{0}{1}` to register your finished art at the `end` of the month or use `{0}{2}` if you need more info</value>
   </data>
   <data name="TRADE_THIS_THEME" xml:space="preserve">
     <value>this month's art trade theme is `{0}`</value>
@@ -161,10 +161,10 @@ please use `{0}{1}` to register your finished art or use `{0}{2}` if you need mo
     <value>@everyone `art trade` ends {0}</value>
   </data>
   <data name="TRADE_ART_LATE_DM" xml:space="preserve">
-    <value>&lt;@{0}&gt; this month's `{1}` themed trade ended, but I'm still missing your art, please send me your art soon</value>
+    <value>&lt;@{0}&gt; this month's `{1}` themed trade ended, but I'm missing your art, would you please send me your art soon?</value>
   </data>
   <data name="REF_TRADE_LAST_MONTH_ART_MISSING" xml:space="preserve">
-    <value>&lt;@{0}&gt; you didn't send me the art for the previous trade (`{1}`), I'm sorry but I'm not supposed to let you enter this month</value>
+    <value>&lt;@{0}&gt; you didn't send me the art for the previous trade (`{1}`), I'm sorry but I'm not supposed to let you enter this month (next month is ok though)</value>
   </data>
   <data name="GOOGLE_TRADE_ENDING_NOW" xml:space="preserve">
     <value>@everyone the **trade** is ending, please send me your art using the `{0}{1}` command or use `{0}{2}` if you need more info</value>
@@ -182,7 +182,8 @@ you can type to `this channel` or send me a `direct message`</value>
   </data>
   <data name="TRADE_THEME_POOL_START" xml:space="preserve">
     <value>**Trade Poll**
-@everyone please choose which theme you'd like for this month's art trade, the `theme with the most votes wins!`</value>
+@everyone please choose which theme you'd like for this month's art trade
+`theme with the most votes wins!`</value>
   </data>
   <data name="GLOBAL_DUPLICAT_ARG" xml:space="preserve">
     <value>&lt;@{0}&gt; there already is {1} with this name registered</value>
@@ -194,7 +195,7 @@ you can type to `this channel` or send me a `direct message`</value>
     <value>&lt;@{0}&gt; maximum number of {1} reached</value>
   </data>
   <data name="GLOBAL_CMDHELP" xml:space="preserve">
-    <value>you can use the `{0}{1}` to {2}</value>
+    <value>you can use the `{0}{1}` command to {2}</value>
   </data>
   <data name="GLOBAL_EMPTY" xml:space="preserve">
     <value>there are no {0} registered at the moment</value>
@@ -205,16 +206,10 @@ you can type to `this channel` or send me a `direct message`</value>
   <data name="GLOBAL_MISSING_INPUT" xml:space="preserve">
     <value>&lt;@{0}&gt; I need {1}, please send me again</value>
   </data>
-  <data name="String" xml:space="preserve">
-    <value>please use the `{1}{2}` command if you wish to reply, here is the message: {3}</value>
-  </data>
   <data name="TRADE_PINGPONG" xml:space="preserve">
     <value>hello &lt;@{0}&gt; I'm sending you a message from `{1}` in their stead
 please use the `{2}{3}` command if you wish to reply, here is the message:
 *\"{4}\"*</value>
-  </data>
-  <data name="String1" xml:space="preserve">
-    <value />
   </data>
   <data name="SUBSCRIBERS_NOTICE" xml:space="preserve">
     <value>hello &lt;@{0}&gt; {1}
