--- a/teanicorns-art-trade-bot/Properties/Resources.resx
+++ b/teanicorns-art-trade-bot/Properties/Resources.resx
@@ -118,7 +118,7 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="REF_REVEAL_FINAL" xml:space="preserve">
-    <value>Hello &lt;@{0}&gt;! Your hidden art trade partner was **{1}** and they are ready to show you their work!!</value>
+    <value>Hello &lt;@{0}&gt;! Your hidden art trade partner was **{1}** and they are ready to show you their work for the {2} themed art trade!!</value>
   </data>
   <data name="REF_REVEAL_NOTIFY" xml:space="preserve">
     <value>Thank you for the reveal &lt;@{0}&gt; A notification was sent to your partner &lt;@{1}&gt;.</value>
@@ -141,7 +141,7 @@ please use `{0}{1}`  to register or use `{0}{2}` if you need more info</value>
   </data>
   <data name="TRADE_MONTH" xml:space="preserve">
     <value>@everyone the art **trade month** started. **We are no longer accepting new entries!**
-please use `{0}{1}` to show your finished art piece or use `{0}{2}` if you need more info
+please use `{0}{1}` to show your finished art piece at the `end` of the month or use `{0}{2}` if you need more info
 but please wait until the end of the trade when everybody has fihisned their art too</value>
   </data>
   <data name="TRADE_THIS_THEME" xml:space="preserve">
@@ -204,9 +204,6 @@ theme with the most votes wins! (^•^)</value>
   </data>
   <data name="TRADE_REGISTER_MISSING_ART" xml:space="preserve">
     <value>you can use the `{2}{3}` command to register the missing art</value>
-  </data>
-  <data name="String" xml:space="preserve">
-    <value />
   </data>
   <data name="TRADE_PINGPONG" xml:space="preserve">
     <value>hello &lt;@{0}&gt; I'm sending you a message from `{1}` in their stead
